/*
 * $Id: ChangeLog,v 1.2651 2004/03/25 13:15:44 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-25 08:12 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/classes.c
    ! Fixed 2 GPF traps related to ->pModuleSymbols

2004-03-25 10:30 UTC-0300 Luiz Rafael Culik Guimaraes<culikr@brturbo.com>
  * source/rtl/ttopbar.prg
    ! minor fix to additem method(fixes an bug reported by Guillermo Varona

2004-03-25 13:22 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbrddcdx.h
  * xharbour/include/hbrdddbf.h
  * xharbour/include/hbrddntx.h
  * xharbour/source/rdd/dbf1.c
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
  * xharbour/source/rdd/dbfdbt/dbfdbt1.c
  * xharbour/source/rdd/dbffpt/dbffpt1.c
  * xharbour/source/rdd/dbfntx/dbfntx1.c
   * implemented logic to eliminate unnecessary hb_fsCommit() if dbf,
     memo or index files was changed and user call COMMIT or CLOSE
     It resolves problem with slow down performance on some Windows
     versions and reduce one OS call.

2004-03-25 10:46 UTC+0100 Giancarlo Niccolai <gc [at] niccolai [dot] ws>
  * source/rtl/hbxml.c
    ! There was a sporadic error in tag closure parsing.
    ! Fixed error description.

2004-03-25 09:10 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/tbrowse.prg
    * Few more fixes. Thanks Luis Krause Mantilla.

2004-03-24 21:20 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/tbrowse.prg
    * Overall Changes suggested by Budyanto Dj. Thanks. Now Tbrowse is very near to Clipper's.

2004-03-24 09:30 UTC-0300 Luiz Rafael Culik Guimaraes<culikr@brturbo.com>
   * contrib/hbzlib/zip.c
     ! minor fix

2004-03-24 19:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * source/rtl/console.c
     ! fix casting problem due to X__WIN32__ defined/undefined.
